[gd_scene load_steps=5 format=3 uid="uid://dpxxvou3uyr11"]

[ext_resource type="Script" uid="uid://euoguk1ty6fg" path="res://levels/menus/level_select/level_picker.gd" id="1_qsylp"]
[ext_resource type="Texture2D" uid="uid://cwtr0qbej2i88" path="res://assets/textures/button-back-normal.png" id="2_qsylp"]
[ext_resource type="PackedScene" uid="uid://bpr6i4auacjqh" path="res://levels/menus/level_select/level_selection_item.tscn" id="3_ed8i0"]
[ext_resource type="Texture2D" uid="uid://bralhae1f5kru" path="res://assets/textures/button-back-hover.png" id="3_u55cg"]

[node name="LevelPicker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qsylp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftLevelPickBTN" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
texture_normal = ExtResource("2_qsylp")
texture_hover = ExtResource("3_u55cg")

[node name="LevelSelectionItem" parent="HBoxContainer" instance=ExtResource("3_ed8i0")]
layout_mode = 2
size_flags_horizontal = 4

[node name="RightLevelPickBTN" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_mode = 0
texture_normal = ExtResource("2_qsylp")
texture_hover = ExtResource("3_u55cg")
flip_h = true

[connection signal="pressed" from="HBoxContainer/LeftLevelPickBTN" to="." method="_on_left_level_pick_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/RightLevelPickBTN" to="." method="_on_right_level_pick_btn_pressed"]
